--- a/src/style/app.css
+++ b/src/style/app.css
@@ -27,3 +27,11 @@
     opacity: 0;
     transform: translateX(-100%);
 }
+
+/* fade effect */
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to {
+    opacity: 0;
+}
