--- a/src/style/app.css
+++ b/src/style/app.css
@@ -35,3 +35,27 @@
 .fade-enter, .fade-leave-to {
     opacity: 0;
 }
+
+/* zoom effect */
+.zoom-enter-active, .zoom-leave-active {
+    transition: opacity .3s, transform .3s;
+}
+.zoom-enter {
+    opacity: 0;
+    transform: scale(5, 5);
+}
+.zoom-enter-to {
+    opacity: 1;
+}
+.zoom-leave {
+    opacity: 1;
+}
+.zoom-leave-to {
+    opacity: 0;
+    transform: translateX(-100%);
+}
+
+/* componets constomization */
+.content {
+    margin: 10px;
+}
