--- a/src/pages/auth/style/auth.css
+++ b/src/pages/auth/style/auth.css
@@ -1,3 +1,28 @@
-.global-header-wrapper {
+.auth-wrapper {
+    z-index: 50;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    min-width: 100%;
+    min-height: 100px;
+    background: rgba(0, 0, 0, 0.2);
+}
 
+.auth-wrapper .auth-sub-page {
+    background: #fff;
+    display: block;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100%;
+    box-shadow: 1px 3px 3px 0px rgba(0, 0, 0, 0.2);
+}
+
+.auth-wrapper .auth-sub-page.auth-login {
+     text-align: center;
+     width: 400px;
+}
+
+.auth-wrapper .auth-sub-page.auth-register {
+     text-align: center;
+     width: 400px;
 }
