--- a/src/pages/auth/style/auth.css
+++ b/src/pages/auth/style/auth.css
@@ -24,5 +24,11 @@
 
 .auth-wrapper .auth-sub-page.auth-register {
      text-align: center;
-     width: 400px;
+     width: 500px;
+     max-height: 600px;
+     overflow-y: scroll;
+}
+
+.auth-wrapper .auth-content .section {
+    /*padding: 15px;*/
 }
